# train

./: Makefile  Makefile.am  Makefile.def  Makefile.rul  autogen.sh  configure.ac
config/: function.json  strfunction.json
formatter/formatter2/: Formatter.h
include/: Descriptor.h  Filed.h  Formatter.h  Header.h  Solution.h  Source.h  common.h
lib/grpc-1.33_dynamic/lib/cmake/grpc/: gRPCTargets-noconfig.cmake  gRPCTargets.cmake
lib/grpc-1.33_dynamic/lib/cmake/protobuf/: protobuf-config-version.cmake
lib/grpc-1.33_dynamic/lib/cmake/re2/: re2Config.cmake
lib/grpc-1.33_dynamic/lib/pkgconfig/: gpr.pc  libcares.pc  protobuf-lite.pc
makefile/: Makefile  Makefile.def
protoc/: function.proto
protos/: Makefile  function.proto
src/: Descriptor.cpp  Header.cpp  Solution.cpp  Source.cpp  common.cpp  main.cpp
